tests/ft/type_checking/invalid/if_else.jk
if true {
    15
} else {
    false
} // type mismatch

if 15 { // not a boolean condition
    15
} else {
    14
}

if true {
    12
} // no else
